logs/pocketmiku.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pocketmiku'...
Listing './lib/python3.5/site-packages/pocketmiku/samples'...
Compiling './lib/python3.5/site-packages/pocketmiku/samples/kimigayo.py'...
***   File "./lib/python3.5/site-packages/pocketmiku/samples/kimigayo.py", line 18
    print "Note:", song_notes[i]
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pocketmiku/samples/ohmydarling.py'...
***   File "./lib/python3.5/site-packages/pocketmiku/samples/ohmydarling.py", line 20
    print "Note:", song_notes[i], characters[song_notes[i]]
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pocketmiku/tools'...
Compiling './lib/python3.5/site-packages/pocketmiku/tools/sendraw.py'...
***   File "./lib/python3.5/site-packages/pocketmiku/tools/sendraw.py", line 10
    print "Sending %s" % " ".join(sys.argv[1:])
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pocketmiku/tools/setlyrics.py'...
***   File "./lib/python3.5/site-packages/pocketmiku/tools/setlyrics.py", line 11
    print u"Setting lyrics to %s" % sys.argv[1].decode('utf-8')
                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pocketmiku/tools/test.py'...
***   File "./lib/python3.5/site-packages/pocketmiku/tools/test.py", line 14
    print "Playing a %s on a %s." % (characters[i], names[i % len(names)])
                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pocketmiku-0.2.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
